--- a/style.css
+++ b/style.css
@@ -28,7 +28,7 @@ body {
 
 main {
   padding: 200px 0 0 0 ;
-  background-image: url(img/bg1.jpg);
+  background-image: url(bg1.jpg);
   background-size: cover;
   background-repeat: none;
   height: 1500px;
